--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,10 @@
 ; Products Link: https://lilygo.cc/products/t-sim7070g
 ; default_envs = T-SIM7070G
 
+; Products Link: https://lilygo.cc/products/t-sim7600
+; default_envs = T-SIM7600X
+
+;!===============================PCIE VARIANT====================================
 ; Products Link: https://lilygo.cc/products/a-t-pcie?variant=42335922094261
 ; default_envs = T-PCIE-A7670X
 
@@ -62,15 +66,8 @@
 ; Products Link: ...
 ; default_envs = T-PCIE-SIM7670G
 
-; Products Link: https://lilygo.cc/products/t-eth-elite-1?variant=44498205049013
-; default_envs = T-ETH-ELITE-A7670X
 
-; Products Link: https://lilygo.cc/products/t-sim7600
-; default_envs = T-SIM7600X
-
-; default_envs = T-A7608X-DC-S3
-; default_envs = T-SIM7080G-S3
-
+;!===============================STANDARD SERIES VARIANT================================
 ; ! Standard interface board, different from others, uses standard interface, the only difference is the modem
 ; default_envs = T-A7670X-S3-Standard
 ; default_envs = T-SIM7000G-S3-Standard
@@ -78,9 +75,28 @@
 ; default_envs = T-SIM7670G-S3-Standard
 ; default_envs = T-SIM7600X-S3-Standard
 
+;!===============================ETH-Elite VARIANT================================
+; Products Link: https://lilygo.cc/products/t-eth-elite-1?variant=44498205049013
+; default_envs = T-ETH-ELITE-A7670X
+; default_envs = T-ETH-ELITE-SIM7600X
+; default_envs = T-ETH-ELITE-SIM7000G
+; default_envs = T-ETH-ELITE-SIM7080G
+; default_envs = T-ETH-ELITE-SIM7670G
+
+;! ===============================Internet-Com VARIANT================================
+; default_envs = T-InternetCOM-A7670X
+; default_envs = T-InternetCOM-SIM7600X
+; default_envs = T-InternetCOM-SIM7000G
+; default_envs = T-InternetCOM-SIM7080G
+; default_envs = T-InternetCOM-SIM7670G
+
+
 ; build test envs
 ; default_envs = T-A7670X-S3-Standard , T-SIM7000G-S3-Standard , T-SIM7080G-S3-Standard , T-SIM7670G-S3-Standard , T-SIM7600X-S3-Standard
 ; default_envs = T-PCIE-A7670X , T-PCIE-SIM7000G , T-PCIE-SIM7080G , T-PCIE-SIM7600X , T-PCIE-SIM7670G , T-ETH-ELITE-A7670X
+default_envs = T-InternetCOM-A7670X , T-InternetCOM-SIM7600X , T-InternetCOM-SIM7000G , T-InternetCOM-SIM7080G , T-InternetCOM-SIM7670G
+; default_envs = T-A7608X-DC-S3
+; default_envs = T-SIM7080G-S3
 
 ;! ===============================Examples=======================================
 ;! ===============================Examples=======================================
@@ -150,6 +166,7 @@ src_dir = examples/ATdebug
 ; src_dir = examples/SimShieldCurrentSensor
 ; src_dir = examples/SetRingMusic
 ; src_dir = examples/CameraWebServer
+; src_dir = examples/CameraWebServer_SoftAP
 ; src_dir = examples/ModemGpsStream
 ; src_dir = examples/QWIIC_I2C_Scan
 ; src_dir = examples/QWIIC_UART_loopback
@@ -161,7 +178,6 @@ platform = espressif32@6.11.0
 framework = arduino
 
 monitor_speed = 115200
-
 
 [esp32dev_base]
 board = esp32dev
@@ -219,8 +235,6 @@ build_flags =
             ${esp32s3_base.build_flags}
             -DLILYGO_T_A7608X_S3
 
-
-
 ; FLASH:16MB PSRAM:8M OPI 
 [env:T-A7608X-DC-S3]
 extends = esp32s3_base
@@ -241,6 +255,19 @@ build_flags =
             ${esp32dev_base.build_flags}
             -DLILYGO_SIM7070G
 
+[env:T-SIM7600X]
+extends = esp32dev_base
+build_flags =
+            ${esp32dev_base.build_flags}
+            -DLILYGO_SIM7600X
+
+[env:T-SIM7080G-S3]
+board = esp32s3box
+build_flags =
+        -DLILYGO_SIM7080G_S3
+        -DARDUINO_USB_CDC_ON_BOOT=1
+
+;!==============================PCIE VARIANT====================================
 [env:T-PCIE-A7670X]
 extends = esp32dev_base
 build_flags = ${esp32dev_base.build_flags}
@@ -266,25 +293,38 @@ extends = esp32dev_base
 build_flags = ${esp32dev_base.build_flags}
             -DLILYGO_T_PCIE_SIM7670G
 
+;! ===============================ETH-Elite VARIANT================================
 [env:T-ETH-ELITE-A7670X]
 extends = esp32s3_base
 build_flags =
             ${esp32s3_base.build_flags}
             -DLILYGO_T_ETH_ELITE_A7670X
-
-[env:T-SIM7600X]
-extends = esp32dev_base
+        
+[env:T-ETH-ELITE-SIM7600X]
+extends = esp32s3_base
 build_flags =
-            ${esp32dev_base.build_flags}
-            -DLILYGO_SIM7600X
+            ${esp32s3_base.build_flags}
+            -DLILYGO_T_ETH_ELITE_SIM7600X
 
-[env:T-SIM7080G-S3]
-board = esp32s3box
+[env:T-ETH-ELITE-SIM7000G]
+extends = esp32s3_base
 build_flags =
-        -DLILYGO_SIM7080G_S3
-        -DARDUINO_USB_CDC_ON_BOOT=1
+            ${esp32s3_base.build_flags}
+            -DLILYGO_T_ETH_ELITE_SIM7000X
 
+[env:T-ETH-ELITE-SIM7080G]
+extends = esp32s3_base
+build_flags =
+            ${esp32s3_base.build_flags}
+            -DLILYGO_T_ETH_ELITE_SIM7080G
 
+[env:T-ETH-ELITE-SIM7670G]
+extends = esp32s3_base
+build_flags =
+            ${esp32s3_base.build_flags}
+            -DLILYGO_T_ETH_ELITE_SIM7670G
+
+;! ===============================STANDARD SERIES VARIANT================================
 ; ! Standard interface board, different from others, uses standard interface, the only difference is the modem
 [SIMCOM_STANDARD]
 build_flags =
@@ -326,3 +366,42 @@ board = esp32-s3-wroom-1-n16r2
 build_flags =
         -DLILYGO_SIM7600X_S3_STAN
         ${SIMCOM_STANDARD.build_flags}
+
+;! ===============================ETH-Elite VARIANT================================
+
+[env:T-InternetCOM-A7670X]
+extends = esp32s3_base
+build_flags =
+        ${esp32s3_base.build_flags}
+        -DLILYGO_T_INTERNET_COM_A7670X
+        
+[env:T-InternetCOM-SIM7600X]
+extends = esp32s3_base
+build_flags =
+        ${esp32s3_base.build_flags}
+        -DLILYGO_T_INTERNET_COM_SIM7600X
+
+[env:T-InternetCOM-SIM7000G]
+extends = esp32s3_base
+build_flags =
+        ${esp32s3_base.build_flags}
+        -DLILYGO_T_INTERNET_COM_SIM7000X
+
+[env:T-InternetCOM-SIM7080G]
+extends = esp32s3_base
+build_flags =
+        ${esp32s3_base.build_flags}
+        -DLILYGO_T_INTERNET_COM_SIM7080G
+
+[env:T-InternetCOM-SIM7670G]
+extends = esp32s3_base
+build_flags =
+        ${esp32s3_base.build_flags}
+        -DLILYGO_T_INTERNET_COM_SIM7670G
+
+
+
+
+
+
+; ===============================utilities.h edits================================
